# skibookers-mvp

./: .gitignore  README.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/: .env.sample  jest.config.ts  package.json
apps/api/src/: main.ts
apps/api/src/app/: app.module.ts  types.d.ts
apps/api/src/app/config/: app.config.ts
apps/api/src/app/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/app/modules/auth/dto/: index.ts  (+3 more)
apps/api/src/app/modules/quiz/: quiz.controller.ts  quiz.module.ts  quiz.service.ts
apps/api/src/app/modules/recommendation/: recommendation.controller.ts  recommendation.module.ts  recommendation.service.ts
apps/api/src/app/shared/constraints/: auth.ts
apps/api/src/app/shared/types/: index.ts  quiz.type.ts  user.type.ts
apps/recommendation-engine/: .env.sample  main.py  package.json  pyproject.toml
apps/recommendation-engine/app/api/: app.py  dependencies.py
apps/recommendation-engine/app/api/v1/endpoints/: recommendations.py
apps/recommendation-engine/app/config/: prefix.py
apps/recommendation-engine/app/engine/: docs.py  graph.py
apps/recommendation-engine/app/schemas/: quiz.py  recommendations.py  resort.py
apps/skibookers-web/: index.html  package.json  vite.config.ts
apps/skibookers-web/src/: main.tsx
apps/skibookers-web/src/app/: app.tsx  constants.ts
apps/skibookers-web/src/app/components/route/: private.tsx  public.tsx
apps/skibookers-web/src/app/context/app-global/: app-global.context.tsx  index.ts
apps/skibookers-web/src/app/lib/: http.ts  query-client.ts
(+11 files in other folders)
